--- a/app/src/main/res/layout/activity_create_newsflash.xml
+++ b/app/src/main/res/layout/activity_create_newsflash.xml
@@ -1,34 +1,47 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_padding"
-    tools:context="com.blueit.g1_chat.CreateNewsflashActivity">
+    android:id="@+id/scrollView2">
 
-    <EditText
-        style="@style/MyEditTextStyle"
-        android:layout_marginTop="100dip"
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/create_newsflash_title"
-        android:hint="@string/create_newsflash_title_hint" />
+        android:padding="@dimen/activity_padding"
+        android:layout_gravity="center"
+        tools:context="com.blueit.g1_chat.CreateNewsflashActivity">
 
-    <EditText
-        style="@style/MyEditTextStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/create_newsflash_content"
-        android:hint="@string/create_newsflash_content_hint" />
+        <EditText
+            style="@style/MyEditTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/create_newsflash_title"
+            android:hint="@string/create_newsflash_title_hint"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true" />
 
-    <Button
-        style="@style/MyButton"
-        android:layout_width="200dip"
-        android:layout_height="30dip"
-        android:layout_marginTop="30dip"
-        android:text="@string/create_newsflash_submit"
-        android:id="@+id/create_newsflash_submit"
-        android:layout_gravity="center_horizontal"/>
+        <EditText
+            style="@style/MyEditTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/create_newsflash_content"
+            android:hint="@string/create_newsflash_content_hint"
+            android:layout_below="@+id/create_newsflash_title"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
+        <Button
+            style="@style/MyButton"
+            android:layout_width="200dip"
+            android:layout_height="30dip"
+            android:text="@string/create_newsflash_submit"
+            android:id="@+id/create_newsflash_submit"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/create_newsflash_content"
+            android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+    </RelativeLayout>
+
+</ScrollView>
