--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -63,7 +63,8 @@
         android:layout_marginTop="5dp"
         android:id="@+id/user_listview"
         android:layout_below="@+id/static_name"
-        tools:listitem="@layout/userlist_item"/>
+        tools:listitem="@layout/userlist_item"
+        android:layout_above="@+id/btn_reg_user" />
 
     <Button
         style="@style/MyButton"
